--- a/Challenge/HTML:CSS/package.json
+++ b/Challenge/HTML:CSS/package.json
@@ -4,7 +4,7 @@
   "description": "About page for X-tend Realty",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "node-sass main.scss main.css -w",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
